--- a/krisna/001.md
+++ b/krisna/001.md
@@ -1,13 +1,4 @@
----
-title: "Alpino 1.júl 1933"
----
-
-<div style="text-align: center; margin: 2rem 0 3rem 0;">
-  <a href="/index.html" style="margin: 0 15px; text-decoration: none; color: #1a237e; font-weight: bold;">Domov</a>
-  <a href="/krisna.html" style="margin: 0 15px; text-decoration: none; color: #1a237e; font-weight: bold;">Krišnamurti</a>
-  <a href="/zen.html" style="margin: 0 15px; text-decoration: none; color: #1a237e; font-weight: bold;">ZEN</a>
-  <a href="/about.html" style="margin: 0 15px; text-decoration: none; color: #1a237e; font-weight: bold;">O stránke</a>
-</div>
+[Domov](index.html)
 
 ALPINO, TALIANSKO – PRVÁ VEREJNÁ PREDNÁŠKA – 1. JÚL 1933
 
