--- a/krisna/002.md
+++ b/krisna/002.md
@@ -1,3 +1,5 @@
+[Domov](/index.html) 
+
 STRESA, TALIANSKO – PRVÁ VEREJNÁ PREDNÁŠKA – 2. JÚL 1933
 
 Priatelia, vo svojich rozhovoroch nebudem splietať intelektuálnu teóriu. Budem hovoriť o svojej vlastnej skúsenosti, ktorá nevznikla z intelektuálnych predstáv, ale ktorá je skutočná. Prosím, nepozerajte na mňa ako na filozofa, ktorý predkladá nový súbor myšlienok, s ktorými si môže váš intelekt žonglovať. To nie je to, čo vám chcem ponúknuť. Radšej by som chcel vysvetliť, že pravda, plný a bohatý život, sa nedá dosiahnuť prostredníctvom žiadnej osoby, napodobňovaním alebo akoukoľvek formou autority.
