--- a/krisna/001.md
+++ b/krisna/001.md
@@ -1,6 +1,22 @@
 [Domov](/index.html) 
 
-ALPINO, TALIANSKO – PRVÁ VEREJNÁ PREDNÁŠKA – 1. JÚL 1933
+**Krátke zhrnutie prvej prednášky v Alpine**
+
+Hlavným posolstvom tohto textu od Kršnamurtiho je, že Pravda (Realita) sa nedá nájsť prostredníctvom opisu, ideálov ani autority; musí byť prežitá priamo, v plnom uvedomení a úprimnosti.
+
+Odmietnutie opisov: Pravda sa nedá opísať. Tí, ktorí hľadajú pravdu študovaním náboženstiev a filozofických opisov, len porovnávajú hotové obrazy, čo vedie k zmätku, pretože realita musí byť zažitá osobne.
+
+Hľadanie Útechy, nie Pravdy: Väčšina ľudí, ktorí sa vydávajú hľadať pravdu, v skutočnosti hľadajú útechu, kompenzáciu a únik od každodenných konfliktov a utrpenia. Tým, že hľadajú úľavu od bolesti, nečelia jej skutočnej príčine a žijú v ilúzii.
+
+Absolútna Úprimnosť: Ak chce človek inteligentne čeliť problému, musí si úprimne priznať, či hľadá Pravdu, alebo len pohodlie a únik. Skutočné hľadanie vyžaduje úplnú čestnosť k sebe samému.
+
+Prázdnota a Dualita: Pocit neúplnosti (prázdnoty) je príčinou utrpenia. Z tejto prázdnoty si ľudia vytvárajú vonkajšie a vnútorné autority/ideály (náboženské, sociálne, morálne), aby sa podporili.
+
+Problém Ideálov a Autority: Pokiaľ sa človek snaží kopírovať ideál, chráni sa ním a nikdy nekoná úprimne. Vnútorná či vonkajšia autorita drží myseľ v dualite (protikladoch ako dobré/zlé, odmena/trest), čo bráni skutočnému rozlišovaniu a vedie k životu pretvárky a neúplného konania.
+
+Záverečné posolstvo: Život plný konfliktov a pokrytectva je výsledkom toho, že myseľ je uväznená v autorite a neustálom úsilí uniknúť. Jediná cesta k plnosti je zistiť, čo naozaj cítime a myslíme, a to prostredníctvom uvedomovania si celého svojho života.
+
+**ALPINO, TALIANSKO – PRVÁ VEREJNÁ PREDNÁŠKA – 1. JÚL 1933**
 
 Priatelia, chcel by som, aby ste urobili živý objav, nie objav vyvolaný opisom iných. Keby vám, napríklad, niekto porozprával o tunajšej scenérii, prišli by ste sem s mysľou pripravenou týmto opisom a realita by vás potom možno sklamala. Nikto nemôže opísať realitu. Musíte ju prežiť, vidieť, cítiť celú jej atmosféru. Keď vidíte jej krásu a pôvab, zažívate obnovenie, oživenie radosti.
 
