--- a/krisna/002.md
+++ b/krisna/002.md
@@ -1,6 +1,36 @@
 [Domov](/index.html) 
 
-STRESA, TALIANSKO – PRVÁ VEREJNÁ PREDNÁŠKA – 2. JÚL 1933
+**Súhrn: STRESA, TALIANSKO – 2. JÚL 1933**
+
+Kršnamurti v tejto prednáške hovorí o Realite ako o niečom živom, neopísateľnom a večnom, ktoré musí byť zažité, nie intelektuálne pochopené. Identifikuje hlavné prekážky k tomuto poznaniu:
+
+1. Čas a Konflikt
+Realita je v Prítomnosti: Poznanie Pravdy nie je v "pohybe času" (minulosť, prítomnosť, budúcnosť). Odkladanie pochopenia na "budúcnosť" vedie len k odkladaniu.
+
+Konflikt: Rozdelenie času a konania (motivované strachom, odmenou, motívmi) vedie k neúplnému konaniu a konfliktu.
+
+Pravé Konanie (Individualita): Rodí sa z úplnosti pochopenia (bez delenia času) a je harmonické. Individualita tu znamená konanie z úplného pochopenia, nie ako súčasť stroja či tradície.
+
+2. Príčina Konfliktu: Hľadanie Bezpečia (Únik)
+Zdroj Utrpenia: Neustály boj, smútok a neharmónia sú spôsobené brzdeným tokom spontánneho konania.
+
+Únik do Systémov: Ľudia nepoznajú hlbokú príčinu utrpenia, a preto hľadajú únik (eváziu). Táto túžba po úniku vytvorila náboženské a spoločenské systémy založené na odkladaní a hľadaní sprostredkovateľov.
+
+Iluze Bezpečia: Konflikt vedie k hľadaniu bezpečia (fyzického aj "duchovného"). Kršnamurti tvrdí, že v živote neexistuje žiadne skutočné bezpečie a hľadanie bezpečia je len formou úniku.
+
+3. Autorita a Egoizmus
+Vytvorenie Autority: Na ochranu ilúzie bezpečia si ľudia vytvárajú autority (kňazov, ideály, tradície). To vedie k otroctvu a chromeniu mysle.
+
+Egoizmus: Vnútorná či vonkajšia autorita zrodená z hľadania bezpečia je koreňom egoizmu (myšlienka "ja" a "moje"), ktorý bráni úplnosti konania.
+
+4. Cesta k Realite: Uvedomenie bez Metódy
+Žiadna Technika: Neexistuje žiadna "technika" alebo "cesta" k Pravde. Hľadanie metódy je len nová forma zotročenia.
+
+Plné Uvedomenie: Realita prichádza len vtedy, keď je konanie úplné a bez námahy. Námaha prestáva, keď si človek uvedomí prekážky (ako je bezpečie a únik) celou svojou bytosťou (emocionálne aj mentálne), nie len intelektuálne.
+
+Výsledok: V plameni tohto úplného uvedomenia prekážky odpadnú, čo vedie k harmónii mysle a srdca – poznaniu večného.
+
+**STRESA, TALIANSKO – PRVÁ VEREJNÁ PREDNÁŠKA – 2. JÚL 1933**
 
 Priatelia, vo svojich rozhovoroch nebudem splietať intelektuálnu teóriu. Budem hovoriť o svojej vlastnej skúsenosti, ktorá nevznikla z intelektuálnych predstáv, ale ktorá je skutočná. Prosím, nepozerajte na mňa ako na filozofa, ktorý predkladá nový súbor myšlienok, s ktorými si môže váš intelekt žonglovať. To nie je to, čo vám chcem ponúknuť. Radšej by som chcel vysvetliť, že pravda, plný a bohatý život, sa nedá dosiahnuť prostredníctvom žiadnej osoby, napodobňovaním alebo akoukoľvek formou autority.
 
