--- a/krisna/003.md
+++ b/krisna/003.md
@@ -1,6 +1,49 @@
 [Domov](/index.html)
 
-ALPINO, TALIANSKO – DRUHÁ VEREJNÁ PREDNÁŠKA – 4. JÚL 1933
+**Súhrn: ALPINO, TALIANSKO – DRUHÁ VEREJNÁ PREDNÁŠKA – 4. JÚL 1933**
+
+Hlavnou témou tejto prednášky je rozpor medzi konaním z voľby (úsilím/úspechom) a konaním z rozlišovania (plnosťou/nekonečnom), pričom kritizuje tradičné chápanie evolúcie a disciplíny.
+
+1. Evolúcia ako Úsilie je Zotročenie
+Tradičné chápanie evolúcie: Je vnímané ako séria úspechov (achievements) vyplývajúcich z neustálej voľby medzi podstatným a nepodstatným.
+
+Dôsledok: Tento proces vytvára neutíchajúce, nekonečné úsilie smerujúce k bezpečiu a vedie k strachu a neustálemu vedomiu „Ja“ (ega). Konanie sa stáva konečným (finite) a zotročuje nás.
+
+Rozdiel: Autor rozlišuje medzi úspechom (konečnosť) a konaním (nekonečno). Najvyššia blaženosť je žiť bez námahy.
+
+2. Prázdnota, Voľba a Dualita
+Príčina námahy: Námaha je voľba. Voľba je nutná len vtedy, ak si je človek vedomý prázdnoty (neúplnosti, osamelosti) vo svojom vnútri.
+
+Príčina prázdnoty: Prázdnota nevzniká náhodne; je výsledkom konania zrodeného z voľby a hľadania zisku.
+
+Mechanizmus Voľby: Konanie je založené na príťažlivosti a odpudivosti (páči/nepáči), čo vedie k dualite a vytváraniu protikladov. Neustála voľba, zrodená zo strachu a túžby, len perpetuuje protiklady a vytvára ďalšie nepodstatné.
+
+Výsledok: Pokiaľ existuje voľba, existuje neutíchajúci boj, úsilie a bolesť, a pocit prázdnoty ostáva.
+
+3. Cesta k Nekonečnému Konaniu: Rozlišovanie (Discernment)
+Oslobodenie: Ak si človek celou svojou bytosťou (emocionálne aj mentálne) uvedomí absurditu a zbytočnosť voľby, prestane voliť.
+
+Rozlišovanie vs. Voľba: Myseľ oslobodená od voľby dosahuje rozlišovanie (discernment) a intuitívnu odpoveď, ktorá je uvedomením (awareness).
+
+Kríza: Kvet rozlišovania a intuície sa rodí v kríze, ak v tej chvíli uvedomenia si človek namiesto voľby z túžby/strachu (ktorá len odkladá problém) koná z plnosti.
+
+Konanie z Plnosti: Konanie zrodené z rozlišovania je nekonečné, naplnenie a pramená z vlastnej plnosti, a preto neobsahuje žiadnu voľbu a žiadnu námahu.
+
+4. Sebadisciplína je Zbytočná
+Podstata disciplíny: Sebadisciplína znamená prispôsobovanie sa mentálnemu obrazu (štandardu, morálnej norme, ideálu) s cieľom vyplniť vnútornú prázdnotu. Je motivovaná strachom a túžbou po bezpečí.
+
+Dôsledok: Disciplína robí z človeka stroj na imitáciu a neprináša harmóniu, ale chaos. Konanie sa stáva obmedzeným a vytvára prázdnotu.
+
+Oslobodenie: Ako pri voľbe, oslobodenie od disciplíny neprichádza bojom proti nej (tým by sa vytvoril len nový protiklad), ale uvedomením si (awareness) celou bytosťou falošnosti imitácie.
+
+Záver: Tam, kde existuje rozlišovanie, neexistuje žiadna disciplína (Musím/Nesmiem), a konanie je spontánne, harmonické a nekonečné.
+
+5. Žiadny Učiteľ k Pravde
+Posledná myšlienka: Nikto nemôže nikoho doviesť k Pravde, pretože Pravda je nekonečná a je to krajina bez ciest.
+
+Individualita: Učiteľ môže dať nástroje (štetce a plátno), ale umelcom sa musíte stať sami. Technika nasleduje až po plameni túžby. Pravda sa nachádza len vtedy, keď je človek úplne sám (nahý), bez techník a bez majstrov.
+
+**ALPINO, TALIANSKO – DRUHÁ VEREJNÁ PREDNÁŠKA – 4. JÚL 1933**
 
 Priatelia, dnes budem hovoriť o tom, čo sa nazýva evolúcia. Je to téma náročná na diskusiu a to, čo poviem, môžete nepochopiť. Ak mi celkom neporozumiete, pýtajte sa ma potom otázky.
 
